Fix RAILWAY_PROJECT_ID error in index.html footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <footer className="bg-white border-t mt-12">
                         <div className="max-w-6xl mx-auto px-4 py-6 text-center">
                             <p className="text-sm text-gray-500">
-                                Quarterly Earning Field Mapper v1.0.0 - Railway Project: {RAILWAY_PROJECT_ID}
+                                Quarterly Earning Field Mapper v1.0.0 - Powered by Railway & Vercel
                             </p>
                         </div>
                     </footer>
