--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -324,7 +324,7 @@
                                 <span className="bg-green-100 px-3 py-1 rounded">Destination Column {mappingConfig.targetColumn}</span>
                             </div>
                             <p className="text-xs text-blue-600 text-center mt-2">
-                                Source tracking will go to Column {mappingConfig.targetColumn + 1}
+                                Source tracking will go to Column {getColumnLetter(mappingConfig.targetColumn + 1)} ({mappingConfig.targetColumn + 1})
                             </p>
                         </div>
 
