--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -319,12 +319,12 @@
                         <div className="bg-blue-50 border border-blue-200 rounded-lg p-4">
                             <h3 className="text-sm font-medium text-blue-800 mb-2">Data Flow</h3>
                             <div className="text-center">
-                                <span className="bg-blue-100 px-3 py-1 rounded">Source Column {mappingConfig.dataColumn}</span>
+                                <span className="bg-blue-100 px-3 py-1 rounded">{mappingConfig.dataColumn} (Column {mappingConfig.dataColumn === 'CO' ? 93 : mappingConfig.dataColumn === 'BR' ? 70 : mappingConfig.dataColumn === 'BS' ? 71 : mappingConfig.dataColumn === 'BT' ? 72 : 93})</span>
                                 <span className="mx-4">→</span>
-                                <span className="bg-green-100 px-3 py-1 rounded">Destination Column {mappingConfig.targetColumn}</span>
+                                <span className="bg-green-100 px-3 py-1 rounded">{getColumnLetter(mappingConfig.targetColumn)} (Column {mappingConfig.targetColumn})</span>
                             </div>
                             <p className="text-xs text-blue-600 text-center mt-2">
-                                Source tracking will go to Column {getColumnLetter(mappingConfig.targetColumn + 1)} ({mappingConfig.targetColumn + 1})
+                                Source tracking will go to {getColumnLetter(mappingConfig.targetColumn + 1)} (Column {mappingConfig.targetColumn + 1})
                             </p>
                         </div>
 
